--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
--e git+https://github.com/jhonat23/app_sell_python.git@102d1a644cbe78f39c5a515da30d7f5e34e396b5#egg=av
+-e git+https://github.com/jhonat23/app_sell_python.git@3c567145c3c9e7e74f5406ff792e49c5f96b8040#egg=av
 click==8.1.3
 decorator==5.1.1
-pv==0.1
+tabulate==0.8.10
